# swegateway

./: CHANGELOG.md  Cargo.toml  README.md  build.ps1  build.sh
docs/: architecture.md
docs/2-planning/: backlog.md
docs/3-design/: architecture.md
docs/4-development/: developer_guide.md
examples/: basic_usage.rs
scripts/ci/: build.sh  lint.sh  test.sh
scripts/dev/: setup.sh
src/: lib.rs  provider.rs  spi.rs  state.rs
src/api/: auth.rs  database.rs  file.rs  grpc.rs  http.rs  input.rs  middleware.rs  mod.rs  notification.rs  output.rs  payment.rs  process.rs  traits.rs  types.rs
src/core/: auth_middleware.rs  daemon.rs  input.rs  metrics_bridge.rs  mod.rs  output.rs  pipeline.rs  rate_limit.rs  retry.rs
src/core/database/: memory.rs  mod.rs
src/core/file/: local.rs  mod.rs
src/core/http/: mod.rs  rest.rs
src/core/notification/: console.rs  mod.rs
src/core/payment/: mock.rs  mod.rs
src/saf/: builders.rs  config.rs  mod.rs
tests/: base64_int_test.rs  config_validation_e2e_test.rs  daemon_lightweight_e2e_test.rs  database_filtering_e2e_test.rs  database_gateway_e2e_test.rs  database_inbound_e2e_test.rs  database_outbound_e2e_test.rs  file_gateway_e2e_test.rs  file_inbound_e2e_test.rs  file_outbound_e2e_test.rs  fixtures_smoke_test.rs  gateway_int_test.rs  grpc_gateway_e2e_test.rs  http_gateway_e2e_test.rs  http_inbound_e2e_test.rs  http_outbound_e2e_test.rs  middleware_edge_e2e_test.rs  notification_gateway_e2e_test.rs  notification_inbound_e2e_test.rs  notification_outbound_e2e_test.rs  payment_gateway_e2e_test.rs  payment_inbound_e2e_test.rs  payment_outbound_e2e_test.rs  pipeline_shortcircuit_e2e_test.rs  rate_limit_e2e_test.rs  reqwest_int_test.rs  retry_e2e_test.rs  streaming_e2e_test.rs  streaming_edge_e2e_test.rs  swe_gateway_caching_e2e_test.rs  swe_gateway_e2e_test.rs  swe_gateway_int_test.rs  swe_gateway_load_e2e_test.rs  swe_gateway_perf_e2e_test.rs  swe_gateway_security_e2e_test.rs  swe_gateway_stress_e2e_test.rs
tests/fixtures/: gateways.rs  middleware.rs  mod.rs  records.rs  seed.rs
xtask/: Cargo.toml
xtask/src/: checksum.rs  index.rs  main.rs  publish.rs  registry.rs  workspace.rs
